kubernetes-all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: 'rabbitmq:3.8-management-alpine'
        ports:
        - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq-service
spec:
  ports:
  - port: 5672
    protocol: TCP
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobapi
spec:
  selector:
    matchLabels:
      app: jobapi
  replicas: 1
  template:
    metadata:
      labels:
        app: jobapi
    spec:
      containers:
      - name: jobapi
        image: 'job-api'
        imagePullPolicy: IfNotPresent
        ports:
        - protocol: TCP
          containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: jobapi-service
  labels:
    app: jobapi-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: jobapi
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jobapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /jobapi(/|$)(.*)
        backend:
          serviceName: jobapi-service
          servicePort: 80
